--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  <h1>This works</h1>
+  <h1 id="title">This works</h1>
+  <h2 class="title_title1">JS is a program language</h2>
   <script src="index.js"></script>
 </body>
 </html>
