--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  <h1 id="title">This works</h1>
-  <h2 class="title_title1">JS is a program language</h2>
-  <script src="index.js"></script>
+  <div class="js-clock">
+    <h1>00:00</h1>
+  </div>
+  <form class="js-form form showing">
+    <input type="text" placeholder="What is your name?">
+  </form>
+  <h4 class="js-greetings greetings"></h4>
+  <script src="clock.js"></script>
+  <script src="greeting.js"></script>
 </body>
 </html>
