--- a/index.html
+++ b/index.html
@@ -14,7 +14,20 @@
     <input type="text" placeholder="What is your name?">
   </form>
   <h4 class="js-greetings greetings"></h4>
+  <form class="js-toDoForm">
+    <input type="text" placeholder="Write a to do">
+  </form>
+  <ul class="js-toDoList">
+    
+  </ul>
+  <span class="js-weather"></span>
+  <!-- <h1 id="title">Name</h1> -->
+  <!-- <h2 class="title_title1">hi i am brad Lee</h2> -->
+  <!-- <script src="index.js"></script> -->
   <script src="clock.js"></script>
   <script src="greeting.js"></script>
+  <script src="todo.js"></script>
+  <script src="bg.js"></script>
+  <script src="weather.js"></script>
 </body>
 </html>
