--- a/index.html
+++ b/index.html
@@ -7,19 +7,24 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  <div class="js-clock">
-    <h1>00:00</h1>
-  </div>
-  <form class="js-form form showing">
-    <input type="text" placeholder="What is your name?">
-  </form>
-  <h4 class="js-greetings greetings"></h4>
-  <form class="js-toDoForm">
-    <input type="text" placeholder="Write a to do">
-  </form>
-  <ul class="js-toDoList">
-    
-  </ul>
+  <div class="js-momentum">
+    <div>
+      <div class="js-clock">
+        <h1>00:00</h1>
+      </div>
+      <form class="js-form form showing">
+        <input type="text" placeholder="What is your name?">
+      </form>
+      <h4 class="js-greetings greetings"></h4>
+    </div>
+    <div>
+      <form class="js-toDoForm">
+        <input type="text" placeholder="Write a to do">
+      </form>
+      <ul class="js-toDoList">
+      </ul>
+    </div>
+  </div>  
   <span class="js-weather"></span>
   <!-- <h1 id="title">Name</h1> -->
   <!-- <h2 class="title_title1">hi i am brad Lee</h2> -->
