--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>momentum</title>
   <link rel="stylesheet" href="index.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
@@ -17,7 +17,9 @@
       <form class="js-form form showing">
         <input type="text" placeholder="What is your name?">
       </form>
-      <h4 class="js-greetings greetings"></h4>
+      <div class="greet">
+        <h4 class="js-greetings greetings"></h4>
+      </div>
     </div>
     <div>
       <form class="js-toDoForm">
